# DMake

./: .gitignore  CMakeLists.txt  README.md  subtree-pull.sh
cmake/macros/: subproject_dirs.cmake
examples/SampleApp/: CMakeLists.qml  CMakeLists.txt
modules/DMakeLib/: .gitignore  CMakeLists.txt
modules/DMakeLib/cpp/DMakeLib/: AddExecutable.cpp  AddExecutable.hpp  CMakeCommand.cpp  CMakeCommand.hpp  DMake.cpp  DMake.hpp  DMakeItem.cpp  DMakeItem.hpp  DeclarativeNinjaGenerator.cpp  DeclarativeNinjaGenerator.hpp  Project.cpp  Project.hpp
tools/DMake/: CMakeLists.txt  main.cpp
